2002-06-14  Jeff Hobbs  <jeffh@ActiveState.com>

	* generic/tkCmds.c (Tk_TkObjCmd): 
	* unix/tkUnixKey.c (TkpGetString): 
	* generic/tkEvent.c (Tk_HandleEvent): 
	* generic/tkInt.h: changed useInputMethods boolean from int to a
	bit in the flags variable (TK_DISPLAY_USE_IM)

	* generic/tkInt.h:
	* generic/tkCmds.c (Tk_WmObjCmd): 
	* unix/tkUnixWm.c (Tk_WmCmd): 
	* win/tkWinWm.c (Tk_WmCmd): changed wmTracing from being an int to
	just a bit in the flags variable (TK_DISPLAY_WM_TRACING)

	* generic/tkEvent.c (Tk_HandleEvent): 
	* unix/tkUnixEvent.c (OpenIM): 
	* unix/tkUnixKey.c (TkpGetString): 
	* generic/tkInt.h: added TK_DISPLAY_XIM_SPOT flag bit for TkDisplay
	and used this to allow a runtime check to see if over-the-spot XIM
	is possible.  If not it will try and fallback to the old-style
	input context, which handles things like dead keys input.

	* generic/tk.decls:     added TIP #84 implementation that adds a
	* generic/tkDecls.h:    Tk_CollapseMotionEvents API which controls
	* generic/tkEvent.c:    Tk's collapsing of incoming motion events
	* generic/tkInt.h:      on its windows.  The default remains to do
	* generic/tkStubInit.c: collapsing.  Added a flags parameter to the
	* generic/tkWindow.c:   internal display structure to support this
	* doc/QWinEvent.3:      and be used in the future for other bits.

	* unix/mkLinks: updated from current docs

2002-06-14  Mo DeJong  <mdejong@users.sourceforge.net>

	* generic/tkBind.c (TkXErrorHandler): Declare static
	function to avoid compiler error with VC++.
	* generic/tkBind.c (ExpandPercents): Cast argument to
	Tk_GetAtomName in order to avoid compiler warning.

2002-06-14  Joe English  <jenglish@users.sf.net>

	* doc/bind.n:
	* generic/tk.h:
	* generic/tkBind.c:
	* generic/tkCanvWind.c:
	* generic/tkCmds.c:
	* generic/tkEvent.c:
	* generic/tkFocus.c:
	* generic/tkGrab.c:
	* generic/tkGrid.c:
	* generic/tkImage.c:
	* generic/tkPack.c:
	* generic/tkPlace.c:
	* generic/tkPointer.c:
	* generic/tkTextWind.c: